<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bottle_calc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hfad.starbuzz.BottleCalc"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/GallonsOfBeerLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GallonsOfBeerLabel"
        android:layout_weight=".2"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:gravity="center" />

    <EditText
        android:id="@+id/gallons"
        style="@android:style/Widget.DeviceDefault.Light.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"

        android:layout_weight=".2"
        android:hint="@string/hint"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/SizeOfBottlesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SizeOfBottlesLabel"
        android:layout_weight=".2"
        android:layout_gravity="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/BottleSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight=".15"
        android:hint="@string/hint"
        android:inputType="numberDecimal"
        android:textSize="25sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/ABVSubmitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/submit_button"
        android:onClick="onClickBottleCalc"
        android:layout_gravity="center"
        android:layout_weight=".2"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/BottleNumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_bottles_needed_label"
        android:layout_weight=".2"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/BottleNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BottleNumber"
        android:textSize="30sp"
        android:hint="@string/hint"
        android:layout_weight=".25"
        android:layout_gravity="center"

        />

</LinearLayout>
